test/link/bit-res-set-bad.out
error: Value $ff00 is not a bit index
    at bit-res-set-bad.asm(5)
error: Value $8 is not a bit index
    at bit-res-set-bad.asm(4)
error: Value $ffffffff is not a bit index
    at bit-res-set-bad.asm(3)
Linking failed with 3 errors
